fix for styling issue - project description text would overflow on a narrow screen (like a smartphone) when it is long and a thumbnail is present

--- a/site/views/home.css
+++ b/site/views/home.css
@@ -72,7 +72,6 @@ div.projectWrapper div.details div.detailsThumbnail img{
 div.projectWrapper div.details div.detailsText{
     left: 240px;
     margin: 10px;
-    position: absolute;
 }
 
 div.projectWrapper div.github {
